--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {font-family: "Lato", sans-serif}
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">ABOUT ME</h2>
-    <p class="w3-opacity"><i>We love music</i></p>
+    <p class="w3-opacity"><i>Choux Kim</i></p>
     <p class="w3-justify">Hi there! My name is Choux. On my personal website, I feature my portfolio works, </p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
