--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
 
-  <!-- The Tour Section -->
+  <!-- The Tour Section
   <div class="w3-black" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">TOUR DATES</h2>
@@ -132,7 +132,7 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
-
+-->
   <!-- Ticket Modal -->
   <div id="ticketModal" class="w3-modal">
     <div class="w3-modal-content w3-animate-top w3-card-4">
