--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. My name is Choux Kim, and I am a second year Computational Media major student at Georgia Institute of Technology. I created a personal website to showcase my portfolio works, some blogs, and other personal projects that I run. I used a w3.css framework to create my website. </p>
+      <p>Welcome to my website. My name is Choux Kim, and I am a second year Computational Media major student at Georgia Institute of Technology. I created a personal website to showcase my portfolio works, some blogs, and other personal projects that I run. In terms of the design aesthetic, I tried to go for the modern look by using black and white as the color palette. I used a w3.css framework to create my website. </p>
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
