--- a/index.html
+++ b/index.html
@@ -163,29 +163,28 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 3">
+      <img src="myart-3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 3">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 4">
+      <img src="myart-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 4">
     </div>
   </div>
-<!--
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 5">
+      <img src="myart-5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 5">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 6">
+      <img src="myart-6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 6">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 7">
+      <img src="myart-7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 7">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 8">
+      <img src="myart-8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Work 8">
     </div>
     <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
