--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
-  <p class="w3-center"><em>I love art</em></p>
+  <p class="w3-center"><em>Choux Kim</em></p>
   <p></p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
