--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body, html {
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
   <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>This is where will be uploading previews of my portfolio works<br> Coming soon!</em></p><br>
+  <p class="w3-center"><em>This is a collection of my fine arts works<br> More Coming soon!</em></p><br>
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
